--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,7 +6,7 @@
 @import "mixins/icons";
 @import "mixins/fonts";
 @import "mixins/mixin";
-@import "mixins/modals";
+//@import "mixins/modals";
 
 @import "header/herder";
 @import "footer/footer";
