--- a/src/css/mixins/_base.scss
+++ b/src/css/mixins/_base.scss
@@ -8,9 +8,15 @@ $color_DustyGray: #9A9A9A;
 
 $font_1: 'Roboto', sans-serif;
 
+$breakpoint_responsive: 1000px;
 $breakpoint_tablet: 768px;
 $breakpoint_mobile: 425px;
 
+@mixin responsive {
+  @media (max-width: $breakpoint_responsive) {
+    @content;
+  }
+}
 
 @mixin tablet {
   @media (max-width: $breakpoint_tablet) {
@@ -43,6 +49,7 @@ body{
   min-height: 100vh;
   overflow-x: hidden;
   color: black;
+  background-color: white;
 }
 
 main{
