--- a/src/css/mixins/_mixin.scss
+++ b/src/css/mixins/_mixin.scss
@@ -45,11 +45,21 @@
   color: white;
   background-color: $color_Azure;
   border-radius: 3px;
-  transition: background-color .3s;
+  transition: background-color .3s, color .3s;
   cursor: pointer;
   height: fit-content;
   letter-spacing: .1em;
   &:hover{
     background-color: $color_Lynch;
+  }
+  &--tab{
+    border-radius: 3px 3px 0 0;
+    background-color: white;
+    color: $color_Black;
+    &:hover,
+    &.active{
+      background-color: $color_Azure;
+      color: white;
+    }
   }
 }
