--- a/src/css/mixins/icons-font/fontello.scss
+++ b/src/css/mixins/icons-font/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17671269');
-  src: url('../font/fontello.eot?17671269#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17671269') format('woff2'),
-       url('../font/fontello.woff?17671269') format('woff'),
-       url('../font/fontello.ttf?17671269') format('truetype'),
-       url('../font/fontello.svg?17671269#fontello') format('svg');
+  src: url('../fonts/icons/fontello.eot?17671269');
+  src: url('../fonts/icons/fontello.eot?17671269#iefix') format('embedded-opentype'),
+       url('../fonts/icons/fontello.woff2?17671269') format('woff2'),
+       url('../fonts/icons/fontello.woff?17671269') format('woff'),
+       url('../fonts/icons/fontello.ttf?17671269') format('truetype'),
+       url('../fonts/icons/fontello.svg?17671269#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
