--- a/src/html/index/components/create.pug
+++ b/src/html/index/components/create.pug
@@ -4,7 +4,7 @@
 - var dropdownItems = ['номер телефона', 'фамилия', 'имя', 'отчество', 'дата рождения', 'пол', 'примечание1', 'примечание2', 'примечание3', 'окончания -ый/ая']
 
 
-.index__create
+section.index__create
     .create
         .create__tabs
             each tab, i in createTabsList
