--- a/src/html/index/components/notifications.pug
+++ b/src/html/index/components/notifications.pug
@@ -9,7 +9,7 @@ mixin infoSliderItem(data)
             .slider-item__date= data.date
             a.slider-item__link.icon-arrow-right(href="#") Подробнее →
 
-.index__notofications.swiper-container
+section.index__notofications.swiper-container
     .index__notofications-wrapper.swiper-wrapper
         each item in sliderData
             .index__notofications-item.swiper-slide
