--- a/src/html/index/components/create.pug
+++ b/src/html/index/components/create.pug
@@ -1,7 +1,8 @@
 - var createTabsList = [{name:'SMS рассылка', icon:'icon-message'}, {name:'Viber рассылка', icon:'icon-viber'}, {name:'VK рассылка', icon: 'icon-vk'}, {name: 'Каскадная рассылка', icon: 'icon-cascade'}]
-- var sendersList = ['Выберете отправителя','Вася', 'Петя', 'Митя']
-- var templatesList = ['Выберете шаблон','Нормальный', 'Косой', 'Кривой']
+- var sendersList = ['выберите отправителя', 'Вася', 'Петя', 'Митя']
+- var templatesList = ['выберите шаблон', 'Нормальный', 'Косой', 'Кривой']
 - var dropdownItems = ['номер телефона', 'фамилия', 'имя', 'отчество', 'дата рождения', 'пол', 'примечание1', 'примечание2', 'примечание3', 'окончания -ый/ая']
+- var base = [{name: 'тестовая база',  abonents: 8000, filtered: 2000}, {name: 'тестовая база 2',  abonents: 8000, filtered: 2000}, {name: 'тестовая база 3',  abonents: 8000, filtered: 2000}]
 
 
 section.index__create
@@ -12,29 +13,115 @@ section.index__create
                 +button(newClass, tab.name, tab.icon, true)
         each item, i in createTabsList
             form.create__item(class= i === 0 ? 'active' : '')
-                .create__item-data
-                    .create__item-row
-                        .create__item-title= item.name
-                        input.create__item-name(name='name', placeholder='введите имя рассылки')
-                    .create__item-row
-                        select.create__item-select(name='sender')
-                            each sender, i in sendersList
-                                option(disabled= i === 0, selected= i===0)= sender
-                        .create__item-link Добавить отправителя
-                    .create__item-row
-                        select.create__item-select(name='template')
-                            each template, i in templatesList
-                                option(disabled= i === 0, selected= i===0)= template
-                        .create__item-link Добавить шаблон
-                    .create__item-row
-                        .create__item-dropdown
-                            +button('create__item-dropdown-btn', 'Персонализация', '', true)
-                            ul.create__item-dropdown-list
-                                each item in dropdownItems
-                                    li.create__item-dropdown-item= item
-                        textarea.create__item-textarea(placeholder='введите текст сообщения')
-                        .create__item-info
-                            .create__item-info-symbols Введено <span>220</span> символов
-                            .create__itemv-quantity Итого: <span>2</span> sms
-                            +button('create__item-info-btn', 'сохранить как шаблон')
-                    .create__item-row
+                .create__item-column.create__item-column--first
+                    .create__item-data
+                        .create__item-elem.create__item-elem--first.create__item-elem--row
+                            .create__item-title= item.name
+                            input.input.create__item-name(name='name', placeholder='введите имя рассылки')
+                        .create__item-elem.create__item-elem--second.create__item-elem--row
+                            .create__item-elem.create__item-elem--column
+                                select.create__item-select.input(name='sender')
+                                    each sender, i in sendersList
+                                        option(disabled= i === 0, selected= i === 0)= sender
+                                .create__item-select-icon.icon-arrow
+                                .create__item-link.link Добавить отправителя
+                            .create__item-elem.create__item-elem--column
+                                select.create__item-select.input(name='template')
+                                    each template, i in templatesList
+                                        option(disabled= i === 0, selected= i === 0)= template
+                                .create__item-select-icon.icon-arrow
+                                .create__item-link.link Добавить шаблон
+                        .create__item-elem.create__item-elem--third.create__item-elem--column
+                            .create__item-dropdown
+                                +button('create__item-dropdown-btn', 'Персонализация', '', true)
+                                .create__item-dropdown-content
+                                    ul.create__item-dropdown-list
+                                        each item in dropdownItems
+                                            li.create__item-dropdown-item= item
+                            textarea.create__item-textarea.textarea(placeholder='введите текст сообщения', name='messsage-textarea')
+                            .create__item-info
+                                .create__item-info-symbols Введено <span>0</span> символов
+                                .create__item-info-quantity Итого: <span>2</span> sms
+                                +button('create__item-info-btn', 'сохранить как шаблон')
+                        .create__item-elem.create__item-elem--fourth.create__item-elem--column
+                            +checkbox('create__item-checkbox', 'Включить транскрипцию', 'checkbox-transcription', 'Запись смс латиницей', 'transliteration-checkbox')
+                            textarea.create__item-textarea.create__item-textarea--transcription.textarea(placeholder='введите текст сообщения', disabled, name='transliteration-textarea', readonly)
+                            .create__item-info
+                                .create__item-info-symbols Введено <span>0</span> символов
+                                .create__item-info-quantity Итого: <span>2</span> sms
+                    .create__item-data
+                        .create__item-elem.create__item-elem--fifth.create__item-elem--row
+                            .create__item-title Запланировать рассылку
+                            +tooltip('create__item-tooltip', 'Выберите дату и время рассылки')
+                        .create__item-elem.create__item-elem--sixth.create__item-elem--column
+                            .create__item-elem.create__item-elem--row.create__item-elem--margin
+                                .create__item-text с
+                                .create__item-date.icon-calendar
+                                    input.create__item-date-input.input(type='text', name='from-date', id='from-date', placeholder='Начало')
+                                .create__item-text до
+                                .create__item-date.icon-calendar
+                                    input.create__item-date-input.input(type='text', name='to-date', id='to-date', placeholder='Окончание')
+                            .create__item-elem.create__item-elem--row
+                                .create__item-elem.create__item-elem--column
+                                    +checkbox('create__item-checkbox', 'Использовать часовой пояс абонента', 'mailing-setting-1')
+                                    +checkbox('create__item-checkbox', 'по МСК, GMT+4:00', 'mailing-setting-2')
+                                    +checkbox('create__item-checkbox', 'Плавная рассылка', 'mailing-setting-3')
+                                .create__item-elem.create__item-elem--column
+                                    +checkbox('create__item-checkbox create__item-checkbox--alive', 'Ограничить срок жизни SMS', 'mailing-setting-4')
+                                    .create__item-alive
+                                        input.create__item-alive-input.input(type='text', name='alive-hours', disabled)
+                                        .create__item-alive-text часа
+                                        input.create__item-alive-input.input(type='text', name='alive-minutes', disabled)
+                                        .create__item-alive-text минут
+                .create__item-column.create__item-column--second
+                    .create__item-data
+                        .create__item-elem.create__item-elem--seventh.create__item-elem--column
+                            .create__item-title Выбор получателей сообщения
+                            .create__item-tabs
+                                +button('create__item-tabs-item active', 'Из базы', '', true)
+                                +button('create__item-tabs-item', 'Ввести номера', '', true)
+                            .create__item-table
+                                table(cellspacing="0" cellpadding="0")
+                                    thead
+                                        tr
+                                            td
+                                            td Фильтр
+                                            td В базе/ отфильтровано
+                                    tbody
+                                        each item, i in base
+                                            tr(class= i%2 === 0 ? 'create__item-table-color': '')
+                                                td
+                                                    +checkbox('create__item-table-checkbox', item.name, 'table-1-checkbox-'+i)
+                                                td
+                                                    .icon-filter
+                                                td= item.abonents+'/'+item.filtered
+                                .create__item-table-btn
+                                    +button('create__item-table-btn-item', 'добавить новую базу')
+                            .create__item-notification *При наличии одинаковых номеров в базах СМС будет отпрвлена только на один из них
+                            +checkbox('create__item-checkbox create__item-checkbox--table', 'Отправлять дублирующие номера', 'recipients-settings-1')
+                            +checkbox('create__item-checkbox create__item-checkbox--table', 'Исключить абонентов из рассылки без заполненных(полей) адресной книги', 'recipients-settings-2')
+                        .create__item-data
+                            .create__item-elem.create__item-elem--eighth.create__item-elem--column
+                                .create__item-elem.create__item-elem--row
+                                    .create__item-title Выбор получателей сообщения
+                                    +tooltip('create__item-tooltip', 'Выберите базы, которые стоит исключить')
+                                .create__item-table
+                                    table(cellspacing="0" cellpadding="0")
+                                        thead
+                                            tr
+                                                td Выберите базу или отдельных получателей
+                                                td фбонентов
+                                        tbody
+                                            each item, i in base
+                                                tr(class= i % 2 === 0 ? 'create__item-table-color' : '')
+                                                    td
+                                                        +checkbox('create__item-table-checkbox', item.name, 'table-2-checkbox-' + i)
+                                                    td= item.abonents
+                                .create__item-calculation
+                                    +button('create__item-calculation-btn', 'рассчитать стоимость')
+                                    .create__item-calculation-info
+                                        .create__item-calculation-abonents Всего абонетнтов - 2000
+                                        .create__item-calculation-messages Сообщений к отправке - 3000
+
+                                .create__item-price Стоимость рассылки по заданным параметрам ~ 200 руб.
+                    +button('create__item-submit', 'отправить', '', false, true)
